app/src/components/events/events.css
.event-panel {
  max-width: 1062px;
  min-width: 940px;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
}
.event-preview-panel {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  padding-top: 5vh;
  padding-bottom: 5vh;
  text-decoration: none;
}
.event-preview-panel:hover { 
  background-color: #f2f4f4;
}
.event-widget-panel {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-left: 2vh;
  margin-right: 2vh;
}
.event-widget {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 91px;
  height: 26px;
  margin-bottom: 2.5vh;
  border-radius: 100px;
}
.event-widget-text {
  height: 20px;
  text-align: center;
  color: #ffffff;
}
.event-preview-picture {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  margin-left: 1.5vh;
  margin-right: 1.5vh;
  width: 250px;
  height: 250px;
}
.event-preview-text-panel {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-left: 1.5vh;
  margin-right: 1.5vh;
  width: 60%;
}
.event-preview-title {
  margin-top: 0em;
  margin-bottom: 0em;
  letter-spacing: 8px;
  color: #000000;
}
.event-preview-meta {
  margin-top: 2em;
  margin-bottom: 2em;
  line-height: 1.77;
  color: #0889ae;
}
.event-preview-summary {
  margin-top: 0em;
  margin-bottom: 0em;
  line-height: 1.77;
  color: #000000;
}
.event-detail-panel {
  max-width: 1062px;
  min-width: 940px;
  padding-left: 1.5vh;
  padding-right: 1.5vh;
}
.event-detail-title {
  margin-top: 0em;
  margin-bottom: 0em;
  letter-spacing: 8px;
  color: #000000;
}
.event-detail-meta {
  margin-top: 2em;
  margin-bottom: 2em;
  line-height: 1.77;
  color: #0889ae;
}
.event-detail-content {
  margin-top: 0em;
  margin-bottom: 0em;
  line-height: 1.77;
  color: #000000;
}
.event-new-panel {
  max-width: 1062px;
  min-width: 940px;
  display: flex;
  flex-direction: column;
}
.event-new-text {
  text-align: center;
}
@media only screen and (max-width: 800px) { 
  .event-panel {
    min-width: 0;
  }
  .event-preview-panel {
    flex-direction: column;
  }
  .event-widget-panel {
    height: 0px;
    visibility: hidden;
  }
  .event-preview-picture {
    width: auto;
    height: 300px;
  }
  .event-preview-text-panel {
    width: 100%;
  }
  .event-preview-title {
    margin-top: 1.5vh;
  }
  .event-new-panel {
    min-width: 0;
  }
  .event-detail-panel {
    min-width: 0;
  }
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .event-preview-picture img{
    width: 100%;
    height: auto;
  }
}

